--- a/about.html
+++ b/about.html
@@ -24,18 +24,18 @@
                                     <a href="about.html">Sobre mí</a>
                                 </div>
                                 <div class="item">
-                                        <a href="#">Portfolio</a>
+                                        <a href="portfolio.html">Portfolio</a>
                                     </div>
                                     <div class="item">
                                             <a href="prices.html">Planes</a>
                                         </div>
                                     <div class="item">
-                                            <a href="#">Contacto</a>
+                                            <a href="contact.html">Contacto</a>
                                         </div>
                         </span>
                         <span class="buttons">
                                 <div class="item">
-                                        <a class="accent" href="#">Pide tu presupuesto</a>
+                                        <a class="accent" href="contact.html">Pide tu presupuesto</a>
                                     </div>
                         </span>
         
@@ -350,8 +350,8 @@
         <div id="publicProfileFooterPromo" style="background-color: #FF187C;text-align: center;" ng-hide="isSignedIn" class="ng-hide">
             <h1>Comentame tu proyecto y solicita tu presupuesto</h1>
             <h2>Rápido y sin compromiso.</h2>
-            <div class="buttons">
-                <button class="btn black big noicon reverse" ng-click="go('/');">
+            <div class="buttons" onclick="window.location='contact.html'">
+                <button class="btn black big noicon reverse" >
                     <i class="fas fa-chevron-right"></i>
                     <span>¿Hablamos?</span>
                 </button>
@@ -363,21 +363,21 @@
                     <div class="links">
                         <ul>
                             <li>Enlaces</li>
-                            <li><a ng-click="go('/designer')">Sobre mí</a></li>
-                            <li><a ng-click="go('/jobs/browse')">Portfolio</a></li>
-                            <li><a href="https://medium.com/ceev" target="_blank">Planes</a></li>
+                            <li><a href="about.html">Sobre mí</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="prices.html">Planes</a></li>
                         </ul>
                         <ul>
                             <li>Información</li>
-                            <li><a ng-click="go('/help')">Preguntas frecuentes</a></li>
-                            <li><a ng-click="go('/docs/privacy')">Politica de privacidad</a></li>
-                            <li><a href="mailto:hello@ceev.io" target="_blank">info@boneluv.es</a></li>
+                            <li><a href="faq.html">Preguntas frecuentes</a></li>
+                            <li><a href="privacy.html">Politica de privacidad</a></li>
+                            <li><a href="mailto:info@boneluv.es" target="_blank">info@boneluv.es</a></li>
                         </ul>
                         <ul>
                             <li>Sígueme</li>
-                            <li><a href="https://twitter.com/ceev_io" target="_blank">Twitter</a></li>
-                            <li><a href="https://facebook.com/ceev.io" target="_blank">Facebook</a></li>
-                            <li><a href="https://instagram.com/ceev.io" target="_blank">Instagram</a></li>
+                            <li><a href="https://twitter.com/boneluvco" target="_blank">Twitter</a></li>
+                            <li><a href="https://facebook.com/boneluvco" target="_blank">Facebook</a></li>
+                            <li><a href="https://instagram.com/boneluvco" target="_blank">Instagram</a></li>
                         </ul>
                     </div>
                 </div>
