--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
                             <a href="about.html">Sobre mí</a>
                         </div>
                         <div class="item">
-                                <a href="#">Portfolio</a>
+                                <a href="portfolio.html">Portfolio</a>
                             </div>
                             <div class="item">
                                     <a href="prices.html">Planes</a>
                                 </div>
                             <div class="item">
-                                    <a href="#">Contacto</a>
+                                    <a href="contact.html">Contacto</a>
                                 </div>
                 </span>
                 <span class="buttons">
                         <div class="item">
-                                <a class="accent" href="#">Pide tu presupuesto</a>
+                                <a class="accent" href="contact.html">Pide tu presupuesto</a>
                             </div>
                 </span>
 
@@ -140,8 +140,8 @@
                         </ul>
                         <ul>
                             <li>Información</li>
-                            <li><a ng-click="go('/help')">Preguntas frecuentes</a></li>
-                            <li><a ng-click="go('/docs/privacy')">Politica de privacidad</a></li>
+                            <li><a href="faq.html">Preguntas frecuentes</a></li>
+                            <li><a href="privacy.html">Politica de privacidad</a></li>
                             <li><a href="mailto:info@boneluv.es" target="_blank">info@boneluv.es</a></li>
                         </ul>
                         <ul>
