--- a/webprices.html
+++ b/webprices.html
@@ -24,18 +24,18 @@
                             <a href="about.html">Sobre mí</a>
                         </div>
                         <div class="item">
-                                <a href="#">Portfolio</a>
+                                <a href="portfolio.html">Portfolio</a>
                             </div>
                             <div class="item">
                                     <a href="prices.html">Planes</a>
                                 </div>
                             <div class="item">
-                                    <a href="#">Contacto</a>
+                                    <a href="contact.html">Contacto</a>
                                 </div>
                 </span>
                 <span class="buttons">
                         <div class="item">
-                                <a class="accent" href="#">Pide tu presupuesto</a>
+                                <a class="accent" href="contact.html">Pide tu presupuesto</a>
                             </div>
                 </span>
 
@@ -171,43 +171,43 @@
         </div>
     </div>
     <div class="landing-cta">
-        <h3>Lanza tu proyecto ya</h3>
-        <h4>Ponte en contacto conmigo y te asesoraré lo mejor posible.</h4>
-        <div class="buttons">
-            <button class="btn noicon">
-                <i class="fas fa-paper-plane"></i>
-                <span>Contacto</span>
-            </button>
-            <button class="btn noicon green">
-                <i class="fas fa-file-alt"></i>
-                <span>Precios</span>
-            </button>
-        </div>
-    </div>
-    <footer class="landing-footer">
-        <div class="content">
-            <div class="links">
-                <ul>
-                    <li>Enlaces</li>
-                    <li><a ng-click="go('/designer')">Sobre mí</a></li>
-                    <li><a ng-click="go('/jobs/browse')">Portfolio</a></li>
-                    <li><a href="https://medium.com/ceev" target="_blank">Planes</a></li>
-                </ul>
-                <ul>
-                    <li>Información</li>
-                    <li><a ng-click="go('/help')">Preguntas frecuentes</a></li>
-                    <li><a ng-click="go('/docs/privacy')">Politica de privacidad</a></li>
-                    <li><a href="mailto:hello@ceev.io" target="_blank">info@boneluv.es</a></li>
-                </ul>
-                <ul>
-                    <li>Sígueme</li>
-                    <li><a href="https://twitter.com/ceev_io" target="_blank">Twitter</a></li>
-                    <li><a href="https://facebook.com/ceev.io" target="_blank">Facebook</a></li>
-                    <li><a href="https://instagram.com/ceev.io" target="_blank">Instagram</a></li>
-                </ul>
+            <h3>Lanza tu proyecto ya</h3>
+            <h4>Ponte en contacto conmigo y te asesoraré lo mejor posible.</h4>
+            <div class="buttons">
+                <button class="btn noicon" onclick="window.location='contact.html'">
+                    <i class="fas fa-paper-plane"></i>
+                    <span>Contacto</span>
+                </button>
+                <button class="btn noicon green" onclick="window.location='prices.html'">
+                    <i class="fas fa-file-alt"></i>
+                    <span>Precios</span>
+                </button>
             </div>
-        </div>
-    </footer>     
+        </div> 
+        <footer class="landing-footer">
+            <div class="content">
+                <div class="links">
+                    <ul>
+                        <li>Enlaces</li>
+                        <li><a href="about.html">Sobre mí</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="prices.html">Planes</a></li>
+                    </ul>
+                    <ul>
+                        <li>Información</li>
+                        <li><a href="faq.html">Preguntas frecuentes</a></li>
+                        <li><a href="privacy.html">Politica de privacidad</a></li>
+                        <li><a href="mailto:info@boneluv.es" target="_blank">info@boneluv.es</a></li>
+                    </ul>
+                    <ul>
+                        <li>Sígueme</li>
+                        <li><a href="https://twitter.com/boneluvco" target="_blank">Twitter</a></li>
+                        <li><a href="https://facebook.com/boneluvco" target="_blank">Facebook</a></li>
+                        <li><a href="https://instagram.com/boneluvco" target="_blank">Instagram</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer> 
     </div>
 </body>
 </html>
