--- a/seoprices.html
+++ b/seoprices.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Planes y precios | Posicionamiento web - Boneluv</title>
+    <link rel="icon" href="boneicono.png" type="image/png"/>
+    <link rel="shortcut icon" href="boneicono.png" type="image/png"/>
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/4e63b47db0.js"></script>
     <script type="text/javascript"> window.$crisp=[];window.CRISP_WEBSITE_ID="6b7b6bb8-754f-49ab-9544-c4a97693dcf7";(function(){ d=document;s=d.createElement("script"); s.src="https://client.crisp.chat/l.js"; s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})(); </script>
