Convert images to WebP

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="landing-item">
                 <div class="landing-content right">
                     <div class="image">
-                        <img src="img/hero2.png">
+                        <img src="img/hero2.webp">
                     </div>
                     <div class="half">
                         <h5>Optimización SEO</h5>
@@ -91,7 +91,7 @@
                         </button>
                     </div>
                     <div class="image">
-                        <img src="img/hero3.png">
+                        <img src="img/hero3.webp">
                     </div>
                     
                 </div>
@@ -99,7 +99,7 @@
             <div class="landing-item">
                 <div class="landing-content right">
                     <div class="image">
-                        <img src="img/hero4.png">
+                        <img src="img/hero4.webp">
                     </div>
                     <div class="half">
                         <h5>Portfolio</h5>
