--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
             <div class="landing-nav-links">
                 <span class="links">
                     <div class="item">
-                        <a href="index.html">Inicio</a>
+                        <a href="index">Inicio</a>
                     </div>
                     <div class="item">
-                            <a href="about.html">Sobre mí</a>
+                            <a href="about">Sobre mí</a>
                         </div>
                         <div class="item">
-                                <a href="portfolio.html">Portfolio</a>
+                                <a href="portfolio">Portfolio</a>
                             </div>
                             <div class="item">
-                                    <a href="prices.html">Planes</a>
+                                    <a href="prices">Planes</a>
                                 </div>
                             <div class="item">
-                                    <a href="contact.html">Contacto</a>
+                                    <a href="contact">Contacto</a>
                                 </div>
                 </span>
                 <span class="buttons">
                         <div class="item">
-                                <a class="accent" href="contact.html">Pide tu presupuesto</a>
+                                <a class="accent" href="contact">Pide tu presupuesto</a>
                             </div>
                 </span>
 
