--- a/pago.html
+++ b/pago.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-        <!-- Load Stripe.js on your website. -->
+<!-- Load Stripe.js on your website. -->
 <script src="https://js.stripe.com/v3"></script>
 
 <!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
 <button
   style="background-color:#6772E5;color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1em"
-  id="checkout-button-plan_FEJBqOyqnYOUjQ"
+  id="checkout-button-sku_FEKzpds0GbQ8jO"
   role="link"
 >
   Checkout
@@ -24,20 +24,20 @@
 <script>
   var stripe = Stripe('pk_live_g7EK1dg6LCVumSnBL6HFRxw600ux1d2UF0');
 
-  var checkoutButton = document.getElementById('checkout-button-plan_FEJBqOyqnYOUjQ');
+  var checkoutButton = document.getElementById('checkout-button-sku_FEKzpds0GbQ8jO');
   checkoutButton.addEventListener('click', function () {
     // When the customer clicks on the button, redirect
     // them to Checkout.
     stripe.redirectToCheckout({
-      items: [{plan: 'plan_FEJBqOyqnYOUjQ', quantity: 1}],
+      items: [{sku: 'sku_FEKzpds0GbQ8jO', quantity: 1}],
 
       // Do not rely on the redirect to the successUrl for fulfilling
       // purchases, customers may not always reach the success_url after
       // a successful payment.
       // Instead use one of the strategies described in
       // https://stripe.com/docs/payments/checkout/fulfillment
-      successUrl: 'https://boneluv.es/',
-      cancelUrl: 'https://boneluv.es/',
+      successUrl: 'https://boneluv.es/success',
+      cancelUrl: 'https://boneluv.es/canceled',
     })
     .then(function (result) {
       if (result.error) {
