--- a/pago.html
+++ b/pago.html
@@ -29,7 +29,7 @@
     // When the customer clicks on the button, redirect
     // them to Checkout.
     stripe.redirectToCheckout({
-      items: [{sku: 'sku_FEKzpds0GbQ8jO', quantity: 1}],
+      items: [{sku: 'plan_FEJBqOyqnYOUjQ', quantity: 1}],
 
       // Do not rely on the redirect to the successUrl for fulfilling
       // purchases, customers may not always reach the success_url after
