--- a/socialprices.html
+++ b/socialprices.html
@@ -92,7 +92,7 @@
 
 
 
-                <button id="checkout-button-sku_FEKzpds0GbQ8jO" role="link" class="btn noicon" ng-show="isSignedIn &amp;&amp; !userData.profile.type" type="submit">
+                <button id="checkout-button-sku_FEKzpds0GbQ8jO" role="link" class="btn noicon">
                     <i class="fas fa-credit-card"></i>
                     <span>Contratar</span>
                 </button>
