--- a/socialprices.html
+++ b/socialprices.html
@@ -93,8 +93,7 @@
 
 
                 <button id="checkout-button-sku_FEKzpds0GbQ8jO" role="link" class="btn noicon">
-                    <i class="fas fa-credit-card"></i>
-                    <span>Contratar</span>
+                  Contratar
                 </button>
                 <div id="error-message"></div>
     
