--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     <script src="https://kit.fontawesome.com/4e63b47db0.js"></script>
     <script type="text/javascript"> window.$crisp=[];window.CRISP_WEBSITE_ID="6b7b6bb8-754f-49ab-9544-c4a97693dcf7";(function(){ d=document;s=d.createElement("script"); s.src="https://client.crisp.chat/l.js"; s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})(); </script>
 </head>
-<body class="allwhite">
+<body>
+    <div>
+        <a href="http://www.boneluv.com">
+            <img src="logo.webp" alt="Boneluv" width="250px">
+        </a>
+    </div>
+    <div>
+        <h2>Under construction</h2>
+        <img src="img/undraw_web_developer_p3e5.svg" alt="Under construction" width="90%">
+    </div>
+    <div>
+
+    </div>
+</body>
+<!-- <body class="allwhite">
     <div class="animateview">
         <nav class="landing-nav">
             <div class="landing-nav-logo">
@@ -158,5 +172,5 @@
         
     </div>
     
-</body>
+</body> -->
 </html>
