--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="logo.webp" alt="Boneluv" width="250px">
         </a>
     </div>
-    <div>
+    <div style="width: 80%">
         <h2>Under construction</h2>
         <img src="img/undraw_web_developer_p3e5.svg" alt="Under construction" width="90%">
     </div>
