--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <img src="logo.webp" alt="Boneluv" width="250px">
         </a>
     </div>
-    <div style="width: 80%">
+    <div style="width: 80%" align="center">
         <h2>Under construction</h2>
-        <img src="img/undraw_web_developer_p3e5.svg" alt="Under construction" width="90%">
+        <img src="img/undraw_web_developer_p3e5.svg" alt="Under construction" width="70%">
     </div>
     <div>
 
