--- a/index.html
+++ b/index.html
@@ -8,21 +8,117 @@
     <link rel="icon" href="boneicono.png" type="image/png"/>
     <link rel="shortcut icon" href="boneicono.png" type="image/png"/>
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://kit.fontawesome.com/4e63b47db0.js"></script>
-    <script type="text/javascript"> window.$crisp=[];window.CRISP_WEBSITE_ID="6b7b6bb8-754f-49ab-9544-c4a97693dcf7";(function(){ d=document;s=d.createElement("script"); s.src="https://client.crisp.chat/l.js"; s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})(); </script>
+    <!-- <script src="https://kit.fontawesome.com/4e63b47db0.js"></script> -->
+    <!-- <script type="text/javascript"> window.$crisp=[];window.CRISP_WEBSITE_ID="6b7b6bb8-754f-49ab-9544-c4a97693dcf7";(function(){ d=document;s=d.createElement("script"); s.src="https://client.crisp.chat/l.js"; s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})(); </script> -->
+    <style>
+        body,html{
+            color:black;
+        }
+        @media (max-width: 1024px){
+            .uc-head img{
+                max-height: 40px;
+            }
+            .uc-body img{
+                width: 90%;
+            }
+            .uc-body h2{
+                font-size: 25px !important;
+                margin-top: 0px !important;                
+            }
+            .uc-body h1{
+                margin-top: 40px !important;
+                font-size:25px !important;
+            }
+            .uc-text{
+                width: 90% !important;
+            }
+            .uc-text h3{
+                width: 95% !important;
+                font-size: 20px !important;
+            }
+            .uc-text p{
+                font-size: 25px !important;
+                margin-bottom: 30px; 
+            }
+            .uc-name{
+                display: inline-block;
+                font-size: 35px !important;
+            }
+            
+        }
+
+        .uc-head{
+            padding-top:10px;
+        }
+        .uc-body h2{
+            font-size: 35px;
+            margin-top: 40px;
+            font-weight: bold;
+            margin-bottom: 40px;
+            line-height: 1.5;
+        }
+        .uc-body h1{
+            font-size: 45px;
+            margin-top: 70px; 
+            font-weight: bold;
+            line-height: 1.5;
+        }
+        .uc-name{
+            border-bottom: 5px solid #ff187c;
+        }
+        .uc-hero{
+            margin-top: 40px;
+            margin-bottom: 80px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+        .uc-hero h3{
+            font-size: 25px;
+            font-weight: 600;
+            margin-top: -15px;
+        }
+        .uc-hero p{
+            font-size: 30px;
+            font-weight: bold;
+            margin-top:30px;
+        }
+        .uc-footer{
+            margin: 0 auto;
+            width: auto;
+        }
+        .uc-footer a{
+            padding: 0px 10px;
+        }
+        .uc-footer img{
+            width:30px;
+        }
+    </style>
 </head>
 <body>
-    <div>
+    <div class="uc-head" align="center">
         <a href="http://www.boneluv.com">
-            <img src="logo.webp" alt="Boneluv" width="250px">
+            <img src="logo.webp" alt="Boneluv" height="60px">
         </a>
     </div>
-    <div style="width: 80%" align="center">
-        <h2>Under construction</h2>
-        <img src="img/undraw_web_developer_p3e5.svg" alt="Under construction" width="70%">
+    <div class="uc-body" style="width: 80%;margin:0 auto;" align="center">
+        <h1>Hey, I am <b class="uc-name">José Manuel</b></h1>
+        <div class="uc-hero">
+            <div class="uc-text"style="text-align: left;width: 40%">
+                    <h2>Amazing web is coming</h2>
+                    <h3>I fixing some bugs and migrating web to React to improve user experience.</h3>
+                    <p>We are in touch<b style="color:#ff187c;">.</b></p>
+            </div>
+            
+            <img src="img/undraw_web_developer_p3e5.svg" alt="Under construction" width="40%">
+        </div>
     </div>
-    <div>
-
+    <div class="uc-footer" align="center">
+        <a href="https://www.github.com/lboneluv" target="_blank" rel="noopener noreferrer"><img src="img/github.png" alt="Github"></a>
+        <a href="https://www.medium.com/boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/medium.png" alt="Medium"></a>
+        <a href="https://www.instagram.com/boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/instagram.png" alt="Instagram"></a>
+        <a href="https://www.twitter.com/boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/twitter.png" alt="Twitter"></a>
+        <p style="margin:20px;">Made with <span>&#10084;</span> by<a style="font-weight: 600;"href="https://boneluv.com">Boneluv</a></p>
     </div>
 </body>
 <!-- <body class="allwhite">
