--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
     <div class="uc-footer" align="center">
         <a href="https://www.github.com/lboneluv" target="_blank" rel="noopener noreferrer"><img src="img/github.png" alt="Github"></a>
-        <a href="https://www.medium.com/boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/medium.png" alt="Medium"></a>
+        <a href="https://www.medium.com/@boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/medium.png" alt="Medium"></a>
         <a href="https://www.instagram.com/boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/instagram.png" alt="Instagram"></a>
         <a href="https://www.twitter.com/boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/twitter.png" alt="Twitter"></a>
         <p style="margin:20px;">Made with <span>&#10084;</span> by<a style="font-weight: 600;"href="https://boneluv.com">Boneluv</a></p>
