--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             }
             .uc-body img{
                 width: 90%;
+                margin-bottom: 40px;
             }
             .uc-body h2{
                 font-size: 25px !important;
@@ -31,6 +32,9 @@
             }
             .uc-text{
                 width: 90% !important;
+            }
+            .uc-hero{
+                flex-direction: column-reverse !important;
             }
             .uc-text h3{
                 width: 95% !important;
@@ -70,6 +74,7 @@
             margin-top: 40px;
             margin-bottom: 80px;
             display: flex;
+            flex-direction: row;
             flex-wrap: wrap;
             justify-content: space-around;
         }
