--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             }
             .uc-body img{
                 width: 90%;
-                margin-bottom: 40px;
+                margin-top: 50px;
+                margin-bottom: 50px;
             }
             .uc-body h2{
                 font-size: 25px !important;
