--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             }
             .uc-body img{
                 width: 90%;
-                margin-top: 50px;
+                margin-top: 30px;
                 margin-bottom: 50px;
+                height: calc(100vh-207.2px);
             }
             .uc-body h2{
                 font-size: 25px !important;
@@ -36,6 +37,7 @@
             }
             .uc-hero{
                 flex-direction: column-reverse !important;
+                margin-bottom: 30px !important;
             }
             .uc-text h3{
                 width: 95% !important;
