Adding language switcher

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="icon" href="boneicono.png" type="image/png"/>
     <link rel="shortcut icon" href="boneicono.png" type="image/png"/>
     <link rel="stylesheet" href="css/main.css">
+    <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+<script>
+    Weglot.initialize({
+        api_key: 'wg_58b0cbea70acff32e7185050a7ef620e8'
+    });
+</script>
     <!-- <script src="https://kit.fontawesome.com/4e63b47db0.js"></script> -->
     <!-- <script type="text/javascript"> window.$crisp=[];window.CRISP_WEBSITE_ID="6b7b6bb8-754f-49ab-9544-c4a97693dcf7";(function(){ d=document;s=d.createElement("script"); s.src="https://client.crisp.chat/l.js"; s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})(); </script> -->
     <style>
@@ -110,12 +116,12 @@
         </a>
     </div>
     <div class="uc-body" style="width: 80%;margin:0 auto;" align="center">
-        <h1>Hey, I am <b class="uc-name">José Manuel</b></h1>
+        <h1>Hola, soy <b class="uc-name">José Manuel</b></h1>
         <div class="uc-hero">
             <div class="uc-text"style="text-align: left;width: 40%">
-                    <h2>Amazing web is coming</h2>
-                    <h3>I fixing some bugs and migrating web to React to improve user experience.</h3>
-                    <p>We are in touch<b style="color:#ff187c;">.</b></p>
+                    <h2>Web increíble en camino</h2>
+                    <h3>Estoy arreglando algunos fallos y migrando de WordPress a React para mejorar la experiencia de usuario.</h3>
+                    <p>Estamos en contacto<b style="color:#ff187c;">.</b></p>
             </div>
             
             <img src="img/undraw_web_developer_p3e5.svg" alt="Under construction" width="40%">
@@ -126,7 +132,7 @@
         <a href="https://www.medium.com/@boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/medium.png" alt="Medium"></a>
         <a href="https://www.instagram.com/boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/instagram.png" alt="Instagram"></a>
         <a href="https://www.twitter.com/boneluvco" target="_blank" rel="noopener noreferrer"><img src="img/twitter.png" alt="Twitter"></a>
-        <p style="margin:20px;">Made with <span>&#10084;</span> by<a style="font-weight: 600;"href="https://boneluv.com">Boneluv</a></p>
+        <p style="margin:20px;">Hecho con <span>&#10084;</span> por<a style="font-weight: 600;"href="https://boneluv.com">Boneluv</a></p>
     </div>
 </body>
 <!-- <body class="allwhite">
